--- a/style.css
+++ b/style.css
@@ -49,22 +49,24 @@
     background-image: url(./image/background.png);
     background-size: cover;
     background-position: 70%;
+    padding-left: 10%;
 }
 
 .main-content h1 {
     font-size: 2.5rem;
     font-weight:500;
-    color: rgb(135, 83, 111);
+    color: rgb(66, 63, 63);
 }
 .main-content p{
-    color: rgb(130, 83, 111); 
+    /* color: rgb(130, 83, 111); */
+    color: rgb(99, 98, 98);
 }
 
 .btn1 {
     width: 150px;
     height: 32px;
     background: transparent;
-    border: 1px solid black;
+    border: 1px solid rgb(99, 98, 98);
     border-radius: 10px;
     letter-spacing: 3px;
     font-weight: bold;
